# DirectoryCompare

./: .gitignore  CMakeLists.txt  DirectoryComparator.cpp  DirectoryComparator.h  HashingUtility.cpp  HashingUtility.h  README.md  build.sh  generate_test_data.py  main.cpp
include/: DirectoryComparator.h  HashingUtility.h
src/: DirectoryComparator.cpp  main.cpp
tests/: test_DirectoryComparator.cpp  test_HashingUtility.cpp
